--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --timeline-shadow: 0px 0px 20px white;
 }
 
 @media (prefers-color-scheme: dark) {
