--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
   --background: #fbfbfb;
   --foreground: #3a3a3a;
   --menu: #e5e5e5d0;
+  --background-image: linear-gradient(60deg, #c6d1dd 0%, white 10%);
 }
 
 @theme inline {
@@ -19,11 +20,13 @@
     --background: #121212;
     --foreground: #fcfcfc;
     --menu: #1e1e1ed0;
+    --background-image: linear-gradient(60deg, #000000 0%, #22282e 115%);
   }
 }
 
 body {
   background: var(--background);
+  background-image: var(--background-image);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
