--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
   --background: #fbfbfb;
   --foreground: #3a3a3a;
   --menu: #e5e5e5d0;
-  --background-image: linear-gradient(60deg, #c6d1dd 0%, white 110%);
+  --background-image: linear-gradient(105deg, #c6d1dd 0%, white 115%);
 }
 
 @theme inline {
@@ -12,7 +12,7 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-  --timeline-shadow: 0px 0px 20px white;
+  --timeline-shadow: 0px 0px 20px var(--foreground);
 }
 
 @media (prefers-color-scheme: dark) {
