--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,18 +15,16 @@
   --timeline-shadow: 0px 0px 20px var(--foreground);
 }
 
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
   :root {
-    --background: #121212;
+    --background: #1b1b1b;
     --foreground: #fcfcfc;
     --menu: #1e1e1ed0;
-    --background-image: linear-gradient(60deg, #000000 0%, #22282e 115%);
   }
-} */
+}
 
 body {
   background: var(--background);
-  background-image: var(--background-image);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
